--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
 
     <title>Quai Antique</title>
 
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+    />
+
     <script defer type="module" src="./Router/router.js"></script>
+    <script
+      defer
+      src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+    ></script>
   </head>
 
   <body>
-    <header>Le menu du site Quai Antique</header>
+    <header>Le menu du site Quai Antique <i class="bi bi-airplane"></i></header>
 
     <main id="main-page">
       <!-- Le contenu de la page sera injecté ici -->
