Ajout de la page Galerie

--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -1,11 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+<div class="text-center text-white hero-scene">
+  <div class="hero-scene-content">
     <h1>Galerie</h1>
-  </body>
-</html>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row row-cols-2 row-cols-lg-3">
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img class="rounded w-100" src="../assets/images/chef.jpg" alt="" />
+        <p class="title-img">Titre</p>
+      </div>
+    </div>
+  </div>
+</div>
